This CL includes the following changes:
- Optimizations to support 40% faster build and 60% smaller image
  - Refactoring the gcloud installation steps to download and extract the latest version of gcloud, eliminating the need to upgrade-after-download, and collapsing some related RUN statements. This results in a container image which is 56% smaller (5.38GB -> 2.33 GB), and builds 40% faster (321 seconds -> 196 seconds).

- Removing unnecessary echo statement from `pretty_print()`
  - the `echo` statement wrapping `printf` was unnecessary, so removed it. In doing so, `pretty_print()` now allows for valid string formatting sequences like `\n`, `\t`, etc

- Refactoring to use pretty print shared library and other optimizations
  - Refactored `setup.sh` to utilize the `pretty_print()` shared library.
- Adding support to allow the user to select a GCP project to use for the installation
- Fix to the existing GCP secrets detection logic, enabling better detection of missing GCP secrets
- Moving the container image Cloud Build step to be async, allowing the setup script to continue while the container image is being built in the background.

- Simplifying the detection and installation of required software
  - Refactored the required software detection/installation logic to be simpler and more DRY

- Fixing various typos

Change-Id: I22d7e2c06dcad3bcc995525defd1a993f6bfc8ba

--- a/docker-build/Dockerfile.production
+++ b/docker-build/Dockerfile.production
@@ -16,55 +16,45 @@ FROM alpine:3.17
 
 # Dependencies
 # - ENV variables
-ENV DEBIAN_FRONTEND=noninteractive
-ARG GCLOUD_VERSION="444.0.0"
 ARG PROJECT_ID=""
 
 ENV PYTHONUNBUFFERED=1
 RUN apk add --no-cache \
-    build-base \
-    vim \
-    nano \
-    python3-dev=3.10.13-r0 \
-    python3=3.10.13-r0 \
-    curl \
-    openssh-client \
-    gettext \
-    direnv
+  build-base \
+  vim \
+  nano \
+  python3-dev=3.10.13-r0 \
+  python3=3.10.13-r0 \
+  curl \
+  openssh-client \
+  gettext \
+  direnv
+
+# Copy changed file to location for pip install
+COPY requirements.txt /tmp/requirements.txt
 
 # Setup Ansible and other PIP-based dependencies
-RUN python -m ensurepip --upgrade
-# RUN pip-compile --generate-hashes requirements.in -v
-# # Copy changed file to location for pip install
-COPY requirements.txt /tmp/requirements.txt
-RUN pip3 install --use-pep517 --require-hashes -r /tmp/requirements.txt
+RUN python -m ensurepip --upgrade \
+  && pip3 install --use-pep517 --require-hashes -r /tmp/requirements.txt
 
-RUN mkdir -p /tmp/gcloud-install \
-    && mkdir -p /var/gcloud-sdk \
-    && curl --output /tmp/gcloud-install/gcloud-sdk.tar.gz https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_VERSION}-linux-x86_64.tar.gz \
-    && tar -xvf /tmp/gcloud-install/gcloud-sdk.tar.gz -C /var/gcloud-sdk \
-    && rm -rf /tmp/gcloud-install
+# Install the Google Cloud CLI
+WORKDIR /var
+RUN curl https://dl.google.com/dl/cloudsdk/release/google-cloud-sdk.tar.gz | tar zx
 
-ENV PATH $PATH:/var/gcloud-sdk/google-cloud-sdk/bin
-# Auto-update upon building
-RUN gcloud components update --quiet --verbosity=critical --no-user-output-enabled
+ENV PATH $PATH:/var/google-cloud-sdk/bin
 RUN gcloud components install kubectl --quiet --no-user-output-enabled
 
 # Add gcloud to bashrc (for the current/root user)
-RUN printf '\n#gcloud binaries\nexport PATH=/var/gcloud-sdk/google-cloud-sdk/bin:${PATH}\n' >> ~/.bashrc
-
-# add authentication for gcloud when bash starts up
-RUN printf '\n#gcloud authentication\n[ ! -z "${PROJECT_ID}" ] && gcloud auth activate-service-account --key-file=./build-artifacts/provisioning-gsa.json --project ${PROJECT_ID}' >> ~/.bashrc
-RUN printf '\n#### Aliases\nsource <(kubectl completion bash)\nalias l="ls -al"\nalias ll="ls -al"\nalias ".."="cd .."\n\n###########\n' >> ~/.bashrc
-# alias k=kubectl complete -F __start_kubectl k
-
-# Add SSH Config to avoid fingerprint checking
-RUN mkdir -p ~/.ssh && touch ~/.ssh/config
-RUN printf 'Host *\n\tStrictHostKeyChecking no\n' >> ~/.ssh/config
-RUN chmod 600 ~/.ssh/config
-
-#direnv installed above via apt
-RUN printf '\n#direnv hook\neval "$(direnv hook bash)"\n' >> ~/.bashrc
+RUN printf '\n#gcloud binaries\nexport PATH=/var/google-cloud-sdk/bin:${PATH}\n' >> ~/.bashrc \
+  # add authentication for gcloud when bash starts up
+  && printf '\n#gcloud authentication\n[ ! -z "${PROJECT_ID}" ] && gcloud auth activate-service-account --key-file=./build-artifacts/provisioning-gsa.json --project ${PROJECT_ID}' >> ~/.bashrc \
+  && printf '\n#### Aliases\nsource <(kubectl completion bash)\nalias l="ls -al"\nalias ll="ls -al"\nalias ".."="cd .."\n\n###########\n' >> ~/.bashrc \
+  # Add SSH Config to avoid fingerprint checking
+  && mkdir -p ~/.ssh \
+  && printf 'Host *\n\tStrictHostKeyChecking no\n' >> ~/.ssh/config \
+  && chmod 600 ~/.ssh/config \
+  #direnv installed above via apt
+  && printf '\n#direnv hook\neval "$(direnv hook bash)"\n' >> ~/.bashrc
 
 # Configure touch points
 RUN mkdir -p /var/consumer-edge-install
@@ -77,9 +67,9 @@ RUN ansible-galaxy collection install community.general
 
 # Run a startup script on start so-as to auto-populate functionality from dynamically added volume
 CMD direnv allow . \
-    && export PATH=/var/gcloud-sdk/google-cloud-sdk/bin:${PATH} \
-    && /var/consumer-edge-install/docker-build/docker-cron-startup-script.sh >> /var/log/cron.log 2>&1 \
-    && source /var/consumer-edge-install/scripts/install-shell-helper.sh \
-    && gcloud auth activate-service-account --key-file=./build-artifacts/provisioning-gsa.json --project ${PROJECT_ID} \
-    && gcloud auth configure-docker --quiet --verbosity=critical \
-    && /bin/bash
+  && export PATH=/var/google-cloud-sdk/bin:${PATH} \
+  && /var/consumer-edge-install/docker-build/docker-cron-startup-script.sh >> /var/log/cron.log 2>&1 \
+  && source /var/consumer-edge-install/scripts/install-shell-helper.sh \
+  && gcloud auth activate-service-account --key-file=./build-artifacts/provisioning-gsa.json --project ${PROJECT_ID} \
+  && gcloud auth configure-docker --quiet --verbosity=critical \
+  && /bin/bash
