--- a/inventory/group_vars/cloud_vxlanid_41.yaml
+++ b/inventory/group_vars/cloud_vxlanid_41.yaml
@@ -15,8 +15,8 @@
 # Name of the cluster
 cluster_name: "cnuc-4"
 
-google_region: "us-west1"
-google_zone: "us-west1-b"
+google_region: "{{ lookup('env', 'REGION') | default('us-central1', True) }}"
+google_zone: "{{ lookup('env', 'ZONE') | default('us-central1-a', True) }}"
 
 # Name of the "store" per the ACM repo
 acm_cluster_name: "default-2"
