--- a/inventory/group_vars/cloud_vxlanid_40.yaml
+++ b/inventory/group_vars/cloud_vxlanid_40.yaml
@@ -46,6 +46,13 @@ robin_disk_paths: [
 
 fleet_cluster_labels: ["type=production", "location=sydney", "country=aus", "earlyaccess=true"] # Examples, need to be key=value comma separated
 
+# VXLAN IPs and Hosts for /etc/hosts file
+cloud_vxlan_hosts: [
+  { name: cnuc-1, ip: 10.200.0.2 },
+  { name: cnuc-2, ip: 10.200.0.3 },
+  { name: cnuc-3, ip: 10.200.0.4 }
+]
+
 # ###
 # ### Cluster Network (Multus)
 # ###
