--- a/inventory/group_vars/cloud_vxlanid_41.yaml
+++ b/inventory/group_vars/cloud_vxlanid_41.yaml
@@ -36,6 +36,14 @@ load_balancer_pool_cidr: [
   "10.200.0.50-10.200.0.70"
 ]
 
+# VXLAN IPs and Hosts for /etc/hosts file
+cloud_vxlan_hosts: [
+  { name: cnuc-1, ip: 10.200.0.2 },
+  { name: cnuc-2, ip: 10.200.0.3 },
+  { name: cnuc-3, ip: 10.200.0.4 }
+]
+
+
 # ###
 # ### Cluster Network (Multus)
 # ###
