--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -153,6 +153,13 @@
     tags:
     - abm-check-membership
 
+  - name: After Cluster Creation, fail if number of available hosts != in-play count
+    fail:
+      msg: "Failure caused by expected {{ ansible_play_hosts_all | length }} hosts but have {{ ansible_play_hosts | length }}. Check failures above to see what issue happened."
+    when: (ansible_play_hosts_all | length) != (ansible_play_hosts | length)
+    tags:
+    - abm-check-membership
+
   - name: Make sure the GKE Hub membership exists
     command:
       cmd: gcloud container hub memberships describe {{ cluster_name }} --format="value(name)" --project {{ google_project_id }}
