Letting keys be on all nodes
Change-Id: I203c7b6e2b9974a50bafc85c1526612b88e63e51

--- a/roles/gcp-setup/tasks/gsa-key-setup.yml
+++ b/roles/gcp-setup/tasks/gsa-key-setup.yml
@@ -80,8 +80,8 @@
   loop: "{{ service_accounts }}"
   when:
   - item.enabled | bool == true
-  - primary_cluster_machine is defined
-  - primary_cluster_machine == true
+  # - primary_cluster_machine is defined
+  # - primary_cluster_machine == true
   tags:
   - gsa-keys-check
   - gsa-keys
@@ -105,8 +105,8 @@
   loop: "{{ has_valid_secret.results }}"
   when:
   - item is not succeeded
-  - primary_cluster_machine is defined
-  - primary_cluster_machine == true
+  # - primary_cluster_machine is defined
+  # - primary_cluster_machine == true
   tags:
   - gsa-keys-create
   - gsa-keys
@@ -125,8 +125,8 @@
   loop: "{{ service_accounts }}"
   when:
   - item.enabled | bool == true
-  - primary_cluster_machine is defined
-  - primary_cluster_machine == true
+  # - primary_cluster_machine is defined
+  # - primary_cluster_machine == true
   tags:
   - gsa-keys-download
   - gsa-keys
