--- a/all-ready-standby.yml
+++ b/all-ready-standby.yml
@@ -20,9 +20,9 @@
   become_user: root
   gather_facts: false
   pre_tasks:
-  - name: Decrypt SSH key
+  - name: Download SSH key
     include_role:
-      name: decrypt-ssh-key
+      name: download-ssh-key
   - name: Gathering Facts
     setup: {}
     tags:
